<?xml version="1.0"?>
<package format="2">
  <name>yocto3d</name>
  <version>0.0.0</version>
  <description>The yocto3d package</description>
  <maintainer email="lagudiez@cs.stanford.edu">Lucas Agudiez Roitman</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>

  <export>
  </export>
</package>
